--- a/src/assets/styles/utilities.scss
+++ b/src/assets/styles/utilities.scss
@@ -12,12 +12,14 @@
   --placeholder-color: #889099;
   --arrow-color: #cfd3d6;
   --p-color: #6d737a;
+  --secondary-background: #f9f9f9;
 
   --header1-fs: 44px;
   --header2-fs: 32px;
   --header3-fs: 18px;
   --paragraph1-fs: 16px;
   --paragraph2-fs: 14px;
+  --label-fs: 16px;
   --button1-fs: 20px;
   --button2-fs: 16px;
   --button3-fs: 14px;
