--- a/src/assets/styles/components/SlideFilter.scss
+++ b/src/assets/styles/components/SlideFilter.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 100%;
+
   h2 {
     margin: 72px 0 18px 0;
   }
@@ -27,13 +28,9 @@
   }
   .brand-slide {
     display: grid;
-    // width: 65%;
-    // grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 290px);
-    @media (min-width: 1450px) {
-      grid-template-columns: repeat(4, 290px);
-    }
+
     @media (max-width: 1100px) {
       grid-template-columns: repeat(2, 290px);
       grid-template-rows: repeat(2, 1fr);
@@ -44,7 +41,9 @@
     .image-container {
       position: relative;
       width: 100%;
+      height: 175px;
       display: flex;
+      border-radius: 4px;
 
       .brand {
         position: absolute;
@@ -64,11 +63,13 @@
         h3 {
           margin: 0;
           padding: 14px;
-          padding-bottom: 0;
         }
       }
       img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 4px;
       }
       &:hover {
         cursor: pointer;
