--- a/src/assets/styles/components/Search.scss
+++ b/src/assets/styles/components/Search.scss
@@ -8,36 +8,63 @@
     margin-bottom: 20px;
     color: var(--contrast-color);
   }
-  .search-box {
+  .search-wrap {
     display: flex;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.85);
-    border-radius: 8px;
-    .vertical {
-      border-left: 1px solid black;
-      height: 24px;
-    }
-    input {
-      border: none;
-      background-color: transparent;
-      text-align: center;
-      font-size: var(--searchbox-fs);
-      padding: 12px 72px;
-      &:focus {
-        outline: none;
-        &::placeholder {
-          color: transparent;
+    align-items: flex-end;
+    position: relative;
+    flex-direction: column;
+    height: 40px;
+    .search-box {
+      display: flex;
+      align-items: center;
+      background-color: rgba(255, 255, 255, 0.85);
+      border-radius: 8px;
+      input {
+        border: none;
+        background-color: transparent;
+        text-align: center;
+        font-size: var(--searchbox-fs);
+        padding: 12px 72px;
+        &:focus {
+          outline: none;
+          &::placeholder {
+            color: transparent;
+          }
+        }
+        &::-webkit-input-placeholder {
+          text-align: center;
+        }
+        &:-moz-placeholder {
+          text-align: center;
         }
       }
-      &::-webkit-input-placeholder {
-        text-align: center;
-      }
-      &:-moz-placeholder {
-        text-align: center;
+      i {
+        margin: 0 12px;
       }
     }
-    i {
-      margin: 0 12px;
+    .options {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      background-color: rgba(255, 255, 255);
+      border-radius: 8px;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+      margin-block-start: 45px;
+      margin-block-end: 0px;
+      padding: 12px;
+      max-height: 200px;
+      overflow: scroll;
+      li {
+        &:hover {
+          cursor: pointer;
+          background-color: rgba(0, 0, 0, 0.05);
+        }
+        text-align: center;
+        list-style: none;
+        font-size: var(--paragraph2-fs);
+        color: var(--p-color);
+      }
     }
   }
   .filter-box {
@@ -65,6 +92,9 @@
         &:focus {
           outline: none;
         }
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
     button {
@@ -76,6 +106,7 @@
       font-size: var(--button2-fs);
       &:hover {
         cursor: pointer;
+        background-color: #31488b;
       }
     }
   }
