--- a/src/assets/styles/components/LessorProfile.scss
+++ b/src/assets/styles/components/LessorProfile.scss
@@ -2,6 +2,7 @@
   .lessor-name {
     white-space: nowrap;
     font-size: var(--header2-fs);
+    font-weight: 500;
     text-decoration: underline;
     text-underline-offset: 8px;
     color: var(--secondary-color);
@@ -20,6 +21,7 @@
       height: 120px;
       border-radius: 50%;
       margin: 20px;
+      object-fit: scale-down;
     }
     .status {
       list-style: none;
