--- a/src/assets/styles/components/CarInforTable.scss
+++ b/src/assets/styles/components/CarInforTable.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 12px 120px;
   table {
     width: 100%;
     border-collapse: collapse;
@@ -12,9 +11,12 @@
     tr {
       white-space: nowrap;
       position: relative;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       &:first-child {
-        font-weight: 500;
-        font-size: 24px;
+        td {
+          font-weight: 600;
+          font-size: 24px;
+        }
       }
       &:nth-child(odd) {
         background-color: #efefef;
@@ -22,12 +24,16 @@
       &:nth-child(even) {
         background-color: var(--contrast-color);
         z-index: 10;
-        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
       }
       td {
         text-align: left;
         font-size: var(--header3-fs);
-        padding: 4px 8px;
+        font-weight: 500;
+        padding: 12px 8px;
+        i {
+          font-size: var(--icon-fs);
+          margin-right: 8px;
+        }
         button {
           background-color: #d9d9d9;
           font-weight: 500;
@@ -56,5 +62,11 @@
       font-size: var(--header3-fs);
       margin-right: 12px;
     }
+  }
+}
+
+@media (max-width: 950px) {
+  .car-infor {
+    margin-top: 20px;
   }
 }
