--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,7 +1,11 @@
 @import "./utilities.scss";
 @import "./components/Navbar.scss";
 @import "./components/Search.scss";
+@import "./components/CarInforTable.scss";
+@import "./components/CarGallery.scss";
+@import "./components/LessorProfile.scss";
 @import "./pages/HomePage.scss";
+@import "./pages/CarDetail.scss";
 
 * {
   font-size: 48px;
