--- a/src/assets/styles/components/LessorProfile.scss
+++ b/src/assets/styles/components/LessorProfile.scss
@@ -37,7 +37,7 @@
           height: auto;
           letter-spacing: normal;
           white-space: normal;
-          color: var(--p-color);
+          color: var(--primary-color);
           i {
             width: 23px;
             height: 23px;
