--- a/src/assets/styles/pages/CarDetail.scss
+++ b/src/assets/styles/pages/CarDetail.scss
@@ -1,6 +1,7 @@
 .car-detail-page {
   .car-name {
-    padding: 12px 4px;
+    padding: 12px;
+    margin-top: 78px;
     font-size: var(--header1-fs);
     font-weight: 600;
     color: var(--contrast-color);
@@ -10,6 +11,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+    margin: 48px 0;
     .lessor-detail {
       margin: 12px 0px;
     }
