--- a/src/assets/styles/pages/ResetPasswordPage.scss
+++ b/src/assets/styles/pages/ResetPasswordPage.scss
@@ -1,4 +1,4 @@
-.signin-container {
+.reset-password-container {
   margin-top: var(--navbar-height);
   min-height: 80vh;
   padding: 2vw;
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .signin-box {
+  .reset-password-box {
     margin-top: 4vw;
     margin-bottom: 4vw;
     padding: 32px;
@@ -18,12 +18,16 @@
     }
     box-shadow: 0 2px 4px -1px rgb(5 25 45 / 30%);
     background-color: var(--contrast-color);
-    form.signin-form {
+    h2 {
+      margin-bottom: 0.33rem;
+      text-align: center;
+    }
+    form {
       width: 100%;
       display: flex;
       flex-direction: column;
       margin: 16px 0 8px;
-      > label {
+      label {
         margin: 16px 0 8px;
       }
       button {
@@ -36,36 +40,9 @@
         background-color: var(--secondary-color);
         color: var(--contrast-color);
       }
-      .option-login {
-        margin-top: 12px;
-        margin-bottom: 8px;
-        display: flex;
-        justify-content: space-between;
-        label {
-          display: flex;
-          color: var(--p-color);
-          &:hover {
-            cursor: pointer;
-          }
-        }
-        > a {
-          color: var(--secondary-color);
-          &:hover {
-            cursor: pointer;
-          }
-        }
-      }
     }
-    .social-links {
-      margin: 16px 0 12px;
+    .error {
+      color: var(--caution-color);
     }
   }
-  h2 {
-    margin-bottom: 0.33rem;
-    text-align: center;
-  }
-}
-
-.error {
-  color: var(--caution-color);
 }
