signin disable when first time

--- a/src/assets/styles/components/SigninBox.scss
+++ b/src/assets/styles/components/SigninBox.scss
@@ -36,6 +36,11 @@
         background-color: var(--secondary-color);
         color: var(--contrast-color);
       }
+      button:disabled,
+button[disabled]{
+  background-color: #cccccc;
+  color: #666666;
+}
       .option-login {
         margin-top: 12px;
         margin-bottom: 8px;
