fix plain car detail without api

--- a/src/assets/styles/utilities.scss
+++ b/src/assets/styles/utilities.scss
@@ -13,6 +13,7 @@
   --arrow-color: #cfd3d6;
   --p-color: #6d737a;
   --secondary-background: #f9f9f9;
+  --green-background: #4ccd59;
 
   --header1-fs: 44px;
   --header2-fs: 32px;
@@ -23,6 +24,7 @@
   --button1-fs: 20px;
   --button2-fs: 16px;
   --button3-fs: 14px;
+  --button4-fs: 12px;
   --icon-fs: 16px;
   --searchbox-fs: 14px;
 
