--- a/src/assets/styles/components/CarGallery.scss
+++ b/src/assets/styles/components/CarGallery.scss
@@ -1,82 +1,43 @@
+$gallery-gap: 12px;
+
 .car-gallery {
+  padding: 50px 150px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  i {
-    position: relative;
-    z-index: 10;
-    font-size: 28px;
-    padding: 8px;
-    border-radius: 50%;
-    background-color: rgb(217, 217, 217, 0.7);
-    cursor: pointer;
-    user-select: none;
-    &:hover {
-      background-color: #d9d9d9;
-      transition: background-color 0.5s;
-    }
-  }
-  .fa-solid.fa-arrow-left {
-    left: 32px;
-  }
-  .fa-solid.fa-arrow-right {
-    right: 32px;
-  }
-  .slideshow-car {
-    width: 700px;
-    height: 700px;
-    img {
+  > div {
+    width: 100%;
+    height: calc(50vw - 100px);
+    display: grid;
+    gap: $gallery-gap;
+    grid-template-columns: calc(75% - calc($gallery-gap / 2)) calc(
+        25% - calc($gallery-gap / 2)
+      );
+
+    .main-view {
       width: 100%;
-      height: 100%;
-      object-fit: scale-down;
-    }
-  }
-  .fade-out {
-    max-width: 700px;
-    max-height: 700px;
-    opacity: 0;
-    transition-duration: 0.5s;
-  }
-  .fade-in {
-    opacity: 1;
-    transition-duration: 0.5s;
-  }
-  .other-view {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    div {
-      max-width: 400px;
-      height: 200px;
-      transition-duration: 0.5s;
+      display: flex;
       img {
-        height: 100%;
         width: 100%;
-        object-fit: contain;
+        height: 100%;
+        object-fit: cover;
       }
     }
-  }
-  @media (max-width: 1100px) {
-    .slideshow-car {
-      width: 600px;
-      height: 600px;
-    }
-  }
-
-  @media (max-width: 950px) {
     .other-view {
-      div {
-        height: 150px !important;
-      }
-    }
-  }
-
-  @media (max-width: 850px) {
-    .other-view {
-      div {
-        display: none;
+      overflow: scroll;
+      display: grid;
+      gap: 12px;
+      grid-template-rows: repeat(3, auto);
+      > div {
+        width: 100%;
+        height: 100%;
+        &:hover {
+          cursor: pointer;
+          opacity: 0.9;
+        }
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
   }
