--- a/src/assets/styles/components/LessorProfile.scss
+++ b/src/assets/styles/components/LessorProfile.scss
@@ -1,84 +1,64 @@
 .profile-detail {
   .lessor-name {
-    white-space: nowrap;
-    font-size: var(--header2-fs);
-    font-weight: 500;
-    text-decoration: underline;
-    text-underline-offset: 8px;
-    color: var(--secondary-color);
-  }
-  .user-role {
-    margin-top: 8px;
-    font-weight: 500;
-    font-size: 24px;
-    color: #6a6f73;
-  }
-  .lessor-status {
     display: flex;
     align-items: center;
-    img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      margin: 20px;
-      object-fit: scale-down;
-    }
-    .status {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      li {
-        display: list-item;
-        height: 35px;
-        div {
-          display: flex;
-          align-items: center;
-          text-align: left;
-          height: auto;
-          letter-spacing: normal;
-          white-space: normal;
-          color: var(--primary-color);
-          i {
-            width: 23px;
-            height: 23px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 12px;
-            font-size: var(--icon-fs);
-          }
-          p {
-            font-size: var(--paragraph1-fs);
-          }
-        }
-      }
+    gap: 12px;
+    .profile-image {
+      height: 36px;
     }
   }
-  .more-infor {
+  .more-info {
     display: flex;
     align-items: center;
-    margin-top: 20px;
+    gap: 20px;
+    > div {
+      display: flex;
+      gap: 4px;
+    }
     button {
-      white-space: nowrap;
-      border: transparent;
-      border-radius: 5px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-      padding: 12px;
-      font-weight: 500;
-      font-size: var(--header3-fs);
       color: var(--contrast-color);
-      cursor: pointer;
+      border-radius: 4px;
+      padding: 8px;
+      border: 1px solid transparent;
+      font-size: calc(var(--button3-fs) - 2px);
+      display: flex;
+      align-items: center;
+      max-height: 30px;
     }
     .view-review-btn {
-      margin-right: 48px;
       background-color: var(--secondary-color);
+      &:hover {
+        border: 1px solid var(--secondary-color);
+        color: var(--secondary-color);
+        background-color: var(--contrast-color);
+        cursor: pointer;
+      }
     }
     .chat-btn {
       background-color: #4ccd59;
+      &:hover {
+        border: 1px solid var(--green-background);
+        color: var(--green-background);
+        background-color: var(--contrast-color);
+        cursor: pointer;
+      }
       i {
         font-size: var(--header3-fs);
         margin-right: 12px;
       }
+    }
+  }
+  .car-info {
+    padding-right: 100px;
+    h3 {
+      font-size: 24px;
+      margin-bottom: 12px;
+      color: var(--secondary-color);
+    }
+    p {
+      color: var(--p-color);
+      font-size: var(--paragraph2-fs);
+      line-height: 1.5;
     }
   }
 }
