--- a/src/assets/styles/components/CarInforTable.scss
+++ b/src/assets/styles/components/CarInforTable.scss
@@ -44,6 +44,7 @@
         display: flex;
         align-items: center;
         gap: 12px;
+        overflow: scroll;
         font-size: var(--paragraph2-fs);
         // color: var(--p-color);
         i {
