add my booking page

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -12,6 +12,7 @@
 @import "./components/SlideFilter.scss";
 @import "./components/SlideBanner.scss";
 @import "./components/SearchResult.scss";
+@import "./pages/MyBookingPage.scss";
 @import "./components/CarCard.scss";
 @import "./components/Footer.scss";
 @import "./components/SigninBox.scss";
