--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -4,6 +4,8 @@
 @import "./pages/CarDetail.scss";
 @import "./pages/SigninPage.scss";
 @import "./pages/NoPage.scss";
+@import "./pages/ProfilePage.scss";
+@import "./components/Profile.scss";
 @import "./components/Navbar.scss";
 @import "./components/Search.scss";
 @import "./components/CarInforTable.scss";
