seperate MyProfile from MyProfilePage

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -22,6 +22,7 @@
 @import "./components/SeoFooter.scss";
 @import "./pages/AddCarPage.scss";
 @import "./components/AddCarBox.scss";
+@import "./components/MyProfile.scss";
 
 * {
   font-size: 16px;
