--- a/src/assets/styles/components/Profile.scss
+++ b/src/assets/styles/components/Profile.scss
@@ -1,17 +1,18 @@
 .profile-container {
   padding: 1rem;
   margin: 0 auto;
-  @media (min-width: 980px) {
-    width: calc(980px - 1rem);
+  @media (min-width: 1080px) {
+    width: calc(1080px - 1rem);
   }
-  @media (max-width: 980px) {
+  @media (max-width: 1080px) {
     width: 100%;
   }
   display: grid;
-  grid-template-columns: 1fr 70%;
+  grid-template-columns: 1fr 3fr;
   gap: 24px;
   .content {
     width: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -21,7 +22,7 @@
       flex-direction: column;
       border-radius: 4px;
     }
-    .card.profile {
+    .card.profile-tag {
       background-color: var(--secondary-color);
       color: var(--contrast-color);
       padding: 1.5rem;
@@ -47,36 +48,9 @@
         }
       }
     }
-    .card.detail {
-      //   height: 80vh;
-      .header {
-        padding: 1.5rem 2rem;
-        border-bottom: 2px solid var(--secondary-background);
-        display: flex;
-        justify-content: space-between;
-        align-items: baseline;
-      }
-      .info-container {
-        padding: 0 2rem;
-        .text {
-          padding: 1rem 0;
-          border-bottom: 1px solid var(--secondary-background);
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          h5 {
-            width: 25%;
-          }
-          input {
-            width: 75%;
-          }
-          .value {
-            color: var(--placeholder-color);
-          }
-        }
-      }
-    }
+
   }
+
   h1,
   h2,
   h3,
