--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -22,6 +22,9 @@
 @import "./components/SeoFooter.scss";
 @import "./pages/AddCarPage.scss";
 @import "./components/AddCarBox.scss";
+@import "./components/AddReviewBox.scss";
+@import "./components/CommentBox.scss";
+@import "./pages/AddReviewPage.scss";
 
 * {
   font-size: 16px;
