--- a/src/assets/styles/components/MyProfile.scss
+++ b/src/assets/styles/components/MyProfile.scss
@@ -11,17 +11,10 @@
     .text {
       padding: 1rem 0;
       border-bottom: 1px solid var(--secondary-background);
-      display: flex;
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: 30% 70%;
       align-items: center;
-      .label {
-        width: 25%;
-      }
-      input {
-        width: 75%;
-      }
       .value {
-        width: 75%;
         color: var(--placeholder-color);
         overflow: hidden;
         text-overflow: ellipsis;
