modal rented car

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -23,6 +23,7 @@
 @import "./pages/AddCarPage.scss";
 @import "./components/AddCarBox.scss";
 @import "./pages/LessorRegisterationPage.scss";
+@import "./components/ModalCarRent.scss";
 
 * {
   font-size: 16px;
