--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -24,6 +24,7 @@
 @import "./components/AddCarBox.scss";
 @import "./components/MyProfile.scss";
 @import "./components/MyBooking.scss";
+@import "./components/MyCars.scss";
 @import "./pages/LessorRegisterationPage.scss";
 
 * {
