finish gcs and some api

--- a/src/assets/styles/components/MyBooking.scss
+++ b/src/assets/styles/components/MyBooking.scss
@@ -68,7 +68,7 @@
         .footer {
           display: flex;
           justify-content: space-between;
-          align-items: end;
+          align-items: flex-end;
           margin-top: auto;
           .cancel {
             color: var(--caution-color);
