--- a/src/assets/styles/components/MyCars.scss
+++ b/src/assets/styles/components/MyCars.scss
@@ -245,7 +245,7 @@
   display: flex;
   gap: 12px;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 
   .topic {
     font-weight: bold;
