--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -40,8 +40,10 @@
         position: relative;
         margin-left: 16px;
         height: 36px;
+        width: 36px;
         img {
           height: 100%;
+          width: 100%;
           object-fit: cover;
           border-radius: 50%;
           &:hover {
