--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -25,6 +25,7 @@
 @import "./components/MyProfile.scss";
 @import "./components/MyBooking.scss";
 @import "./components/MyCars.scss";
+@import "./components/Approval.scss";
 @import "./components/AddReviewBox.scss";
 @import "./components/CommentBox.scss";
 @import "./pages/AddReviewPage.scss";
