search for booking, approval mgmt, match mgmt

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -25,7 +25,8 @@
 @import "./components/MyProfile.scss";
 @import "./components/MyBooking.scss";
 @import "./components/MyCars.scss";
-@import "./components/Approval.scss";
+@import "./components/ApprovalManagement.scss";
+@import "./components//MatchManagement.scss";
 @import "./components/AddReviewBox.scss";
 @import "./components/CommentBox.scss";
 @import "./pages/AddReviewPage.scss";
