recieve charge from renter and ui

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -15,6 +15,7 @@
 @import "./components/SlideBanner.scss";
 @import "./components/SearchResult.scss";
 @import "./pages/MyBookingPage.scss";
+@import "./pages/PaymentPage.scss";
 @import "./components/CarCard.scss";
 @import "./components/Footer.scss";
 @import "./components/SigninBox.scss";
