--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -27,6 +27,8 @@
 @import "./components/MyCars.scss";
 @import "./components/ApprovalManagement.scss";
 @import "./components//MatchManagement.scss";
+@import "./components/ProfileStatusTab.scss";
+@import "./components/ProfileSearchBar.scss";
 @import "./components/AddReviewBox.scss";
 @import "./components/CommentBox.scss";
 @import "./pages/AddReviewPage.scss";
