--- a/src/assets/styles/components/MyCars.scss
+++ b/src/assets/styles/components/MyCars.scss
@@ -111,7 +111,10 @@
       display: flex;
       align-items: center;
       gap: 12px;
+      width: 235px;
       select {
+        width: 235px;
+        text-align: center;
         border-radius: 4px;
         border-color: var(--secondary-color);
         appearance: none;
