--- a/src/assets/styles/components/MatchManagement.scss
+++ b/src/assets/styles/components/MatchManagement.scss
@@ -1,58 +1,7 @@
-.match-container {
+.match-approval-container {
   display: flex;
   flex-direction: column;
-  .status-bar {
-    display: flex;
-    .status {
-      flex: 1 100%;
-      text-align: center;
-      padding: 1rem;
-      border-bottom: solid 2px var(--secondary-background);
-      &:hover {
-        cursor: pointer;
-        color: var(--secondary-color);
-      }
-    }
-    .status.selected {
-      border-bottom: solid 2px var(--secondary-color);
-      color: var(--secondary-color);
-    }
-  }
-  .search-bar {
-    width: 100%;
-    border-bottom: solid 2px var(--secondary-background);
-    padding: 1rem;
-    box-sizing: border-box;
-    display: flex;
-    form {
-      background-color: var(--secondary-background);
-      width: 100%;
-      padding: 8px;
-      display: grid;
-      align-items: center;
-      grid-template-columns: auto minmax(0, 1fr);
-      button {
-        height: 100%;
-        border: none;
-        &:hover {
-          cursor: pointer;
-        }
-        i {
-          margin: 0 1rem;
-          font-size: 1.25rem;
-        }
-      }
-      input {
-        background-color: transparent;
-        border: none;
-        font-size: 1rem;
-        &:focus {
-          outline: none;
-        }
-      }
-    }
-  }
-  .booking-container {
+  .match-approval-list {
     // height: 50vh;
     display: flex;
     flex-direction: column;
@@ -60,68 +9,66 @@
       text-align: center;
       padding: 6rem 0;
     }
-    .booking {
+    .match-approval {
       min-height: 13rem;
       padding: 2rem;
-      display: grid;
-      gap: 2rem;
-      grid-template-columns: auto minmax(0, 1fr);
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
       border-bottom: solid 2px var(--secondary-background);
-      .car-picture {
-        background-color: var(--secondary-color);
-        width: 13rem;
-        height: 13rem;
-        object-fit: cover;
-        border-radius: 4px;
+      .header {
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+        h3 {
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        .status {
+          margin-left: auto;
+          &.rejected {
+            color: var(--caution-color);
+          }
+          &.approved {
+            color: var(--green-background);
+          }
+        }
+      }
+      p {
+        color: var(--p-color);
+        overflow-wrap: break-word;
+      }
+      .images {
+        display: grid;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+        gap: 1rem;
+        .card {
+          display: flex;
+          img {
+            width: 100%;
+            max-height: 300px;
+          }
+          h3 {
+            overflow-wrap: break-word;
+          }
+        }
+      }
+      .action {
+        margin-left: auto;
+        align-items: center;
+        &.approve {
+          color: var(--green-background);
+        }
+        &.reject {
+          color: var(--caution-color);
+        }
         &:hover {
           cursor: pointer;
         }
       }
-      .booking-info {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        .header {
-          display: flex;
-          gap: 1rem;
-          justify-content: space-between;
-          align-items: center;
-          h2 {
-            word-break: break-all;
-            min-width: 0;
-            &:hover {
-              cursor: pointer;
-            }
-          }
-          .status-cancel {
-            color: var(--caution-color);
-          }
-        }
-        p {
-          color: var(--p-color);
-          overflow-wrap: break-word;
-        }
-        .footer {
-          display: flex;
-          justify-content: space-between;
-          align-items: flex-end;
-          margin-top: auto;
-          .cancel {
-            color: var(--caution-color);
-            align-items: center;
-            &:hover {
-              cursor: pointer;
-            }
-          }
-          .price {
-            color: var(--secondary-color);
-            font-weight: 600;
-            margin-top: auto;
-          }
-        }
-      }
+
     }
-    .booking:last-child {
+    .match-approval:last-child {
       border-bottom: none;
     }
   }
