--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -25,6 +25,7 @@
 @import "./components/MyProfile.scss";
 @import "./components/MyBooking.scss";
 @import "./components/MyCars.scss";
+@import "./components/PaymentHistory.scss";
 @import "./components/UserApprovalMgmt.scss";
 @import "./components/CarApprovalMgmt.scss";
 @import "./components/MatchManagement.scss";
