link style to global and put component to navbar

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -30,6 +30,7 @@
 @import "./pages/AddReviewPage.scss";
 @import "./pages/LessorRegisterationPage.scss";
 @import "./components/ModalCarRent.scss";
+@import "./components/Notification.scss";
 
 * {
   font-size: 16px;
