fix search query

--- a/src/assets/styles/components/MyCars.scss
+++ b/src/assets/styles/components/MyCars.scss
@@ -90,11 +90,29 @@
     width: 100%;
     height: 100%;
   }
+  .no-background {
+    text-align: center;
+    padding: 96px;
+  }
   .filter-box {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
     margin: 24px 0;
+    > button {
+      border: none;
+      padding: 0 12px;
+      margin: 4px 0;
+      border-radius: 4px;
+      margin-left: 12px;
+      transition: background-color 0.1s ease-in-out, border 0.1s ease-in-out,
+        color 0.2s ease-in-out;
+      &:hover {
+        cursor: pointer;
+        background-color: var(--caution-color);
+        color: white;
+      }
+    }
     .filter {
       display: flex;
       align-items: center;
