make pick date link when rent

--- a/src/assets/styles/components/ModalCarRent.scss
+++ b/src/assets/styles/components/ModalCarRent.scss
@@ -32,6 +32,10 @@
         font-size: var(--paragraph1-fs);
         margin-right: 8px;
       }
+      input[type="date"] {
+        overflow: scroll;
+        padding-inline-end: 0px;
+      }
       #idcardimg,
       #drivinglicenseimg {
         padding: 6px 0;
