adminMgmt finished (sprint3)

--- a/src/assets/styles/components/MatchMgmt.scss
+++ b/src/assets/styles/components/MatchMgmt.scss
@@ -10,7 +10,7 @@
       padding: 6rem 0;
     }
     .match-approval {
-      min-height: 13rem;
+      // min-height: 13rem;
       padding: 2rem;
       display: flex;
       flex-direction: column;
