--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -29,7 +29,7 @@
 @import "./components/PaymentHistory.scss";
 @import "./components/UserApprovalMgmt.scss";
 @import "./components/CarApprovalMgmt.scss";
-@import "./components/MatchManagement.scss";
+@import "./components/MatchMgmt.scss";
 @import "./components/ProfileStatusTab.scss";
 @import "./components/ProfileSearchBar.scss";
 @import "./components/AddReviewBox.scss";
