--- a/src/assets/styles/components/ModalCarRent.scss
+++ b/src/assets/styles/components/ModalCarRent.scss
@@ -32,6 +32,14 @@
         font-size: var(--paragraph1-fs);
         margin-right: 8px;
       }
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+      input[type="number"] {
+        -moz-appearance: textfield;
+      }
       input[type="date"] {
         padding-inline-end: 0px;
       }
