--- a/src/assets/styles/components/UserApprovalMgmt.scss
+++ b/src/assets/styles/components/UserApprovalMgmt.scss
@@ -52,7 +52,7 @@
           display: flex;
           img {
             width: 100%;
-            max-height: 300px;
+            height: 250px;
           }
           h3 {
             overflow-wrap: break-word;
