--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -39,6 +39,7 @@
 @import "./components/ModalCarRent.scss";
 @import "./components/Notification.scss";
 @import "./pages/PaymentPage.scss";
+@import "./pages/ChatPage.scss";
 
 * {
   font-size: 16px;
