--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -40,6 +40,7 @@
 @import "./components/Notification.scss";
 @import "./pages/PaymentPage.scss";
 @import "./pages/ChatPage.scss";
+@import "./components/MatchCar.scss";
 
 * {
   font-size: 16px;
