--- a/src/assets/styles/utilities.scss
+++ b/src/assets/styles/utilities.scss
@@ -7,6 +7,7 @@
 
   --primary-color: black;
   --secondary-color: #4a60a1;
+  --secondary-color-rgb: 74, 96, 161;
   --contrast-color: white;
   --caution-color: #b71c1c;
   --placeholder-color: #889099;
