--- a/src/assets/styles/components/Chat.scss
+++ b/src/assets/styles/components/Chat.scss
@@ -16,18 +16,18 @@
     display: flex;
     flex-direction: column;
     background-color: var(--contrast-color);
-    border-radius: 4px 0 0 4px;
-    border: solid 1px var(--arrow-color);
-    border-right: 0;
+    border-radius: 16px 0 0 16px;
+    border-right: solid 2px var(--secondary-background);
     .header {
       font-weight: 600;
       margin-left: 32px;
     }
     .chatlist {
-      border-top: solid 1px var(--arrow-color);
+      border-top: solid 2px var(--secondary-background);
       flex: auto;
       display: flex;
       flex-direction: column;
+      padding: 8px;
       overflow: hidden;
       overflow-y: scroll;
       .chat {
@@ -35,20 +35,13 @@
         align-items: center;
         height: 32px;
         padding: 16px;
-        span {
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
+        border-radius: 8px;
         &.selected {
-          background-color: var(--secondary-background);
-          span {
-            font-weight: 600;
-          }
+          background-color: rgba(var(--secondary-color-rgb), 0.1) !important;
         }
         &:hover {
-          span {
-            font-weight: 600;
-          }
+          cursor: pointer;
+          background-color: var(--secondary-background);
         }
       }
       .no-chat {
@@ -63,73 +56,6 @@
     display: flex;
     flex-direction: column;
     background-color: var(--contrast-color);
-    border-radius: 0 4px 4px 0;
-    border: solid 1px var(--arrow-color);
-    .header {
-      border-bottom: solid 1px var(--arrow-color);
-      padding: 0 32px;
-      h2 {
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-    }
-    .message-container {
-      flex: auto;
-      display: flex;
-      flex-direction: column-reverse;
-      overflow: auto;
-      padding: 0 16px;
-      .system {
-        display: flex;
-        justify-content: center;
-        color: var(--p-color);
-        margin: 16px 0;
-      }
-      .message {
-        display: flex;
-        flex-direction: column;
-        &.left {
-          align-items: flex-start;
-        }
-        &.right {
-          align-items: flex-end;
-        }
-        .username {
-          margin-top: 16px;
-        }
-        .text {
-          margin-top: 8px;
-          width: fit-content;
-          max-width: 40%;
-          word-wrap: break-word;
-          background-color: var(--secondary-background);
-          border-radius: 32px;
-          padding: 12px 16px;
-        }
-      }
-    }
-    form {
-      display: flex;
-      border: solid 1px var(--arrow-color);
-      border-radius: 32px;
-      margin: 20px;
-      padding: 12px 24px;
-      input {
-        all: unset;
-        width: 100%;
-        &::placeholder {
-          color: var(--p-color);
-        }
-      }
-      button {
-        all: unset;
-        margin-left: 16px;
-        &:hover {
-          color: var(--secondary-color);
-          font-weight: 500;
-          cursor: pointer;
-        }
-      }
-    }
+    border-radius: 0 16px 16px 0;
   }
 }
