--- a/src/assets/styles/components/PaymentHistory.scss
+++ b/src/assets/styles/components/PaymentHistory.scss
@@ -27,6 +27,10 @@
       text-align: center;
       padding: 6rem 0;
     }
+    .footer {
+      display: flex;
+      justify-content: space-between;
+    }
     .trans-approval {
       min-height: 13rem;
       padding: 2rem;
