--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -41,6 +41,7 @@
 @import "./pages/PaymentPage.scss";
 @import "./pages/ChatPage.scss";
 @import "./components/Chat.scss";
+@import "./components/MatchCar.scss";
 
 * {
   font-size: 16px;
