--- a/src/assets/styles/components/CarCard.scss
+++ b/src/assets/styles/components/CarCard.scss
@@ -54,6 +54,7 @@
       width: 100%;
       align-items: center;
       img {
+        height: 28px;
         border-radius: 50%;
         width: 28px;
         object-fit: cover;
