--- a/src/assets/styles/components/SearchResult.scss
+++ b/src/assets/styles/components/SearchResult.scss
@@ -13,12 +13,12 @@
     color: var(--placeholder-color);
   }
   .result-wrapper {
-    margin-top: 20px;
+    margin: 20px 0;
     display: grid;
     // width: 60%;
     // grid-template-columns: repeat(3, 1fr);
     grid-template-columns: repeat(3, 300px);
-    grid-template-rows: repeat(2, 1fr);
+    // grid-template-rows: repeat(2, 1fr);
     @media (min-width: 1450px) {
       grid-template-columns: repeat(4, 300px);
     }
@@ -35,5 +35,10 @@
     border: none;
     border-radius: 4px;
     margin: 32px 0;
+    transition: .2s ease-in-out 0s;
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.05);
+    }
   }
 }
